src/objects/Pure360_Event_Report__c.object
<CustomObject>
    <fields>
        <fullName>Click_Date__c</fullName>
        <label>Click Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Click_Url__c</fullName>
        <label>Click Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DF_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DF Contact</label>
        <referenceTo>DF_Contact__c</referenceTo>
        <relationshipLabel>Pure360 Event Report</relationshipLabel>
        <relationshipName>Pure360_Event_Report</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delivery_Complete_Date__c</fullName>
        <label>Delivery Complete Date</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_ID__c</fullName>
        <label>Delivery_ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Start_Date__c</fullName>
        <label>Delivery Start Date</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <label>Event Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MessageName__c</fullName>
        <label>MessageName</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <label>Profile</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>deliveryDate__c</fullName>
        <label>Delivery Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>firstName__c</fullName>
        <label>First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lastName__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>notificationSubject__c</fullName>
        <label>Notification Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Pure360 Event Report</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Type__c</columns>
        <columns>email__c</columns>
        <columns>DF_Contact__c</columns>
        <columns>MessageName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PE{00000}</displayFormat>
        <label>Pure360 Event Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pure360 Event Report</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>